# dotfiles

./: .bash_profile  .bashrc  .gitignore  ag-ignore  bash_profile  bashrc  com.googlecode.iterm2.plist  ctags  gitconfig  gitignore  install.sh  manual-install.txt  tmux.conf  vimrc  zshrc
.vim/plugin/: freebsd.vim
cquery/: language-server-setup-vim  settings.json
hammerspoon/: init.lua
plugin/: cscope_add.vim  grep.vim
scripts/internet-testing/: calcspeed.py  pyproject.toml  speeds.txt  testConnection.py  testConnection2.py
scripts/internet-testing/internet_testing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/internet-testing/tests/: test_internet_testing.py
vim/: coc-settings.json  vim
vim/Scripts/: update_scopedb.sh
vim/ftplugin/: c.vim  cpp.vim
vim/plugin/: cscope-2.vim  cscope.vim  freebsd.vim  git_diff_revisions.vim  vsearch.vim
vim/sessions/: default.vim
zsh/: fzf-git-checkout.sh
