[tool.poetry]
name = "internet-testing"
version = "0.1.0"
description = ""
authors = ["Richard Matthews <richard_matthews@apple.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pingparsing = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
jedi = "^0.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
